// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "GrantRead",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "Grantee",
      "docs": Object {},
      "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead.parameter.Grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);",
}
`;

exports[`csharp snapshot 2`] = `
" \`GrantRead\` <a name=\\"GrantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);
\`\`\`

Grant access to retrieve an authorization token.

# \`Grantee\`<sup>Required</sup> <a name=\\"Grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* Amazon.CDK.AWS.IAM.IGrantable

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "displayName": "GrantRead",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "grantee",
      "docs": Object {},
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead.parameter.grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.AuthorizationToken_GrantRead(grantee IGrantable)",
}
`;

exports[`go snapshot 2`] = `
" \`GrantRead\` <a name=\\"GrantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`go
import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.AuthorizationToken_GrantRead(grantee IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

# \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "grantRead",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "grantee",
      "docs": Object {},
      "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead.parameter.grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "software.amazon.awscdk.services.iam.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)",
}
`;

exports[`java snapshot 2`] = `
" \`grantRead\` <a name=\\"grantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)
\`\`\`

Grant access to retrieve an authorization token.

# \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* software.amazon.awscdk.services.iam.IGrantable

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "grant_read",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "grantee",
      "docs": Object {},
      "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read.parameter.grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "aws_cdk.aws_iam.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)",
}
`;

exports[`python snapshot 2`] = `
" \`grant_read\` <a name=\\"grant_read\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)
\`\`\`

Grant access to retrieve an authorization token.

# \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* aws_cdk.aws_iam.IGrantable

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "grantRead",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "grantee",
      "docs": Object {},
      "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "@aws-cdk/aws-iam.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)",
}
`;

exports[`typescript snapshot 2`] = `
" \`grantRead\` <a name=\\"grantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`typescript
import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

# \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable

---
"
`;

exports[`wing snapshot 1`] = `
Object {
  "displayName": "grantRead",
  "docs": Object {
    "summary": "Grant access to retrieve an authorization token.",
  },
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "grantee",
      "docs": Object {},
      "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "IGrantable",
            "fqn": "@aws-cdk/aws-iam.IGrantable",
            "id": "@aws-cdk/aws-iam.IGrantable",
            "packageName": "@aws-cdk/aws-iam",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "bring { AuthorizationToken } from \\"@aws-cdk/aws-ecr\\"

AuthorizationToken.grantRead(grantee: IGrantable)",
}
`;

exports[`wing snapshot 2`] = `
" \`grantRead\` <a name=\\"grantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`wing
bring { AuthorizationToken } from \\"@aws-cdk/aws-ecr\\"

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

# \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable

---
"
`;
